@@ -1,5 +1,10 @@
 2006-12-07  Mark Wielaard  <mark@klomp.org>
 
+	* tools/Makefile.am: Explicitly define  and use bootclasspath as
+	GLIBJ_BOOTCLASSPATH
+
+2006-12-07  Mark Wielaard  <mark@klomp.org>
+
 	* javax/swing/JEditorPane.java (createEditorKitForContentType):
 	Always load from system class loader.
 
